<resources>
    <!-- global -->
    <string name="app_name">Hillforts</string>

    <!-- Login View -->
    <string name="title_login_view">Login to Hillforts</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="toast_login_invalid_input">Please enter email and password</string>
    <string name="log_signup_successful">User %1$s signed up.</string>
    <string name="log_signin_successful">User %1$s signed in.</string>
    <string name="info_logging_in">Logging you in...</string>
    <string name="toast_fb_signup_failed">Sign Up failed</string>
    <string name="toast_fb_signin_failed">Sign In failed</string>
    <!-- Only requried for self-made auth not for firebase -->
    <string name="toast_signin_failed">E-mail and password combination does not exist</string>
    <string name="toast_signup_failed">E-mail address is already used</string>

    <!-- Hillfort List View -->
    <string name="title_hillfort_list_view">All Hillforts</string>
    <string name="menu_add">Add</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="lat">Lat:</string>
    <string name="lng">Lng:</string>
    <string name="visited">Visited</string>
    <string name="log_signed_out">User logged out.</string>
    <string name="favourite_hillforts">Favourites</string>
    <string name="all_hillforts">All</string>

    <!-- Hillfort Details -->
    <string name="title_hillfort_details_view">Hillfort</string>
    <string name="b_item_save">Save</string>
    <string name="b_item_add">Add</string>
    <string name="b_item_cancel">Cancel</string>
    <string name="b_item_delete">Delete</string>
    <string name="b_item_add_image">Add image</string>
    <string name="b_add_fav">Add</string>
    <string name="b_remove_fav">Remove</string>
    <string name="cb_not_yet_visited">Not yet visited</string>
    <string name="cb_visited_on">Visited on</string>
    <string name="notes">Notes</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="toast_details_invalid_input">Please enter a name</string>
    <string name="share">Share</string>
    <string name="modal_change_image">Change image</string>
    <string name="modal_change_image_text">Please choose a source</string>
    <string name="modal_change_image_camera">Camera</string>
    <string name="modal_change_image_gallery">Gallery</string>
    <string name="modal_cancel">Cancel</string>
    <string name="menu_navigate">Guide me!</string>
    <string name="toast_same_location">You are already there!</string>

    <!-- Edit Location -->
    <string name="title_edit_location_view">Set location</string>
    <string name="hillfort_marker_title">Hillfort: </string>
    <string name="current_marker_loc">Current location</string>

    <!-- Settings -->
    <string name="title_settings_view">Settings</string>
    <string name="card_title_user_info">Your information</string>
    <string name="card_title_statistics">Statistics</string>
    <string name="card_title_preferences">Preferences</string>
    <string name="card_title_app_info">About Hillforts</string>
    <string name="user_password_label">Password:</string>
    <string name="user_email_label">E-mail:</string>
    <string name="user_uid_label">User-ID:</string>
    <string name="app_credits">by Thomas Pilz</string>
    <string name="app_year">2021</string>
    <string name="total_sites">Total sites</string>
    <string name="sites_visited">Visited sites</string>
    <string name="pct_visited">Progress</string>
    <string name="num_img_val"># Hillfort Images</string>
    <string name="img_num_col_label"># Image columns</string>

    <!-- Hillfort Map View -->
    <string name="title_hillfort_map_view">Map of Hillforts</string>
    <string name="menu_map">Map of Hillforts</string>

    <!-- Search View -->
    <string name="search_hint">Search hillforts</string>
    <plurals name="results">
        <item quantity="one">%d result in %.6f seconds</item>
        <item quantity="other">%d results in %.6f seconds</item>
    </plurals>

    <!-- Hillfort Camera View -->
    <string name="toast_photo_saved">Photo saved</string>
    <string name="toast_photo_failed">Photo capture failed</string>
    <string name="toast_user_allow_photo">Allow the app to access the camera to take a photo!</string>
    <string name="photo_permission_denied">User declined permission to access camera.</string>
    <string name="take_photo">Take photo</string>
    <string name="title_camera_view">Camera</string>
</resources>