<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemShare"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemAddImage"
        android:icon="@drawable/ic_outline_add_photo_alternate_24"
        android:title="@string/b_item_add_image"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemDelete"
        android:icon="@drawable/ic_outline_delete_24"
        android:title="@string/b_item_delete"
        android:visible="false"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/itemCancel"
        android:icon="@drawable/ic_outline_cancel_24"
        android:title="@string/b_item_cancel"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/itemSave"
        android:icon="@drawable/ic_outline_check_circle_24"
        android:title="@string/b_item_add"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/itemTakePhoto"
        android:icon="@drawable/ic_outline_add_a_photo_24"
        android:title="@string/take_photo"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemNavigate"
        android:icon="@drawable/ic_outline_navigation_24"
        android:title="@string/menu_navigate"
        app:showAsAction="never" />
</menu>