<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemAppBarSearch"
        android:icon="@drawable/ic_outline_search_24"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemSave"
        android:icon="@drawable/ic_outline_add_circle_outline_24"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/itemMap"
        android:icon="@drawable/ic_outline_map_24"
        android:title="@string/menu_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemSettings"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/itemLogout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never|withText" />
</menu>